js262/test/language/block-scope/syntax/redeclaration/class-name-redeclaration-attempt-with-const.js


/*---
description: redeclaration with const-LexicalDeclaration (ClassDeclaration in BlockStatement)
esid: sec-block-static-semantics-early-errors
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Block : { StatementList }

    It is a Syntax Error if the LexicallyDeclaredNames of StatementList contains
    any duplicate entries.

---*/


$DONOTEVALUATE();

{ class f {} const f = 0 }
